...
    tools:context=".Welcome"
    android:background="@drawable/welcome_bg2">

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/FlatButton"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Picture Puzzle"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:typeface="serif"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:theme="@style/FlatButton"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Cross Word"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:typeface="serif"
        android:padding="8dp"
...
